// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "default_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.bordered: false - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": false,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "properties.bordered: false_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabledDates.dates - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "properties.disabledDates.dates_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabledDates.max - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "properties.disabledDates.max_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabledDates.min - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "properties.disabledDates.min_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabledDates.ranges - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "properties.disabledDates.ranges_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.inputStyle: CSS style applied - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},{\\"border\\":\\"1px solid red\\"}]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "properties.inputStyle: CSS style applied_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "properties.title_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.allowClear: false - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": false,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.allowClear: false_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.autoFocus: true - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": true,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.autoFocus: true_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.disabled: true - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": true,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.disabled: true_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.format: YYYY-MMMM - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MMMM",
      "getPopupContainer": [Function],
      "id": "property.format: YYYY-MMMM_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label align: right - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.label align: right_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label colon: true - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.label colon: true_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label disabled: true - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.label disabled: true_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label extra: extra text added - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.label extra: extra text added_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label inline: true - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.label inline: true_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.label span: 5 - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.label span: 5_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.placeholder: - Select this Month - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.placeholder: - Select this Month_input",
      "onChange": [Function],
      "placeholder": "Select this Month",
      "size": undefined,
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.size: large - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.size: large_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": "large",
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.size: small - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.size: small_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": "small",
      "suffixIcon": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.suffixIcon: CalendarFilled - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.suffixIcon: CalendarFilled_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": <IconComp1
        basePath=""
        blockId="property.suffixIcon: CalendarFilled_suffixIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="CalendarFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.suffixIcon: CalendarFilled.blue - value[0] - MonthSelector 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "disabled": undefined,
      "disabledDate": [Function],
      "format": "YYYY-MM",
      "getPopupContainer": [Function],
      "id": "property.suffixIcon: CalendarFilled.blue_input",
      "onChange": [Function],
      "placeholder": "Select Month",
      "size": undefined,
      "suffixIcon": <IconComp1
        basePath=""
        blockId="property.suffixIcon: CalendarFilled.blue_suffixIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "color": "blue",
            "name": "CalendarFilled",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "value": null,
    },
    Object {},
  ],
]
`;
